trunk/Archive2/1c/f7d400828f0043/output
In file included from /usr/local/include/c++/5.1.0/bits/stl_map.h:63:0,
                 from /usr/local/include/c++/5.1.0/map:61,
                 from main.cpp:4:
/usr/local/include/c++/5.1.0/tuple: In instantiation of 'std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {int&&}; long unsigned int ..._Indexes1 = {0ul}; _Args2 = {}; long unsigned int ..._Indexes2 = {}; _T1 = const int; _T2 = Block]':
/usr/local/include/c++/5.1.0/tuple:1161:63:   required from 'std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {int&&}; _Args2 = {}; _T1 = const int; _T2 = Block]'
/usr/local/include/c++/5.1.0/ext/new_allocator.h:120:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const int, Block>; _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Tp = std::_Rb_tree_node<std::pair<const int, Block> >]'
/usr/local/include/c++/5.1.0/bits/alloc_traits.h:256:4:   required from 'static std::_Require<std::allocator_traits<_Alloc>::__has_construct<_Tp, _Args ...> > std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const int, Block>; _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const int, Block> > >; std::_Require<std::allocator_traits<_Alloc>::__has_construct<_Tp, _Args ...> > = void]'
/usr/local/include/c++/5.1.0/bits/alloc_traits.h:402:16:   required from 'static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const int, Block>; _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const int, Block> > >; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]'
/usr/local/include/c++/5.1.0/bits/stl_tree.h:530:32:   required from 'void std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_construct_node(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Block>; _KeyOfValue = std::_Select1st<std::pair<const int, Block> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Block> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const int, Block> >*]'
/usr/local/include/c++/5.1.0/bits/stl_tree.h:547:21:   required from 'std::_Rb_tree_node<_Val>* std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_create_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Block>; _KeyOfValue = std::_Select1st<std::pair<const int, Block> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Block> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const int, Block> >*]'
/usr/local/include/c++/5.1.0/bits/stl_tree.h:2180:33:   required from 'std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_emplace_hint_unique(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Block>; _KeyOfValue = std::_Select1st<std::pair<const int, Block> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Block> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree_iterator<std::pair<const int, Block> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator = std::_Rb_tree_const_iterator<std::pair<const int, Block> >]'
/usr/local/include/c++/5.1.0/bits/stl_map.h:499:8:   required from 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](std::map<_Key, _Tp, _Compare, _Alloc>::key_type&&) [with _Key = int; _Tp = Block; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Block> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = Block; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = int]'
main.cpp:52:8:   required from here
/usr/local/include/c++/5.1.0/tuple:1172:70: error: no matching function for call to 'Block::Block()'
         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
                                                                      ^
main.cpp:28:5: note: candidate: Block::Block(const Block&)
     Block(const Block &other){
     ^
main.cpp:28:5: note:   candidate expects 1 argument, 0 provided
main.cpp:21:5: note: candidate: Block::Block(int, const std::vector<char>&, const std::vector<char>&, int, int, bool)
     Block(int blockNum, std::vector<char> const &data, std::vector<char> const &blockHash,
     ^
main.cpp:21:5: note:   candidate expects 6 arguments, 0 provided
